--- a/23.12.22/Pseudo-Selectors-Level-1_1/style.css
+++ b/23.12.22/Pseudo-Selectors-Level-1_1/style.css
@@ -8,3 +8,14 @@
   margin: 0;
   padding: 0;
 }
+
+a:visited {
+  color: #fcb941;
+  font-size: 3em;
+}
+
+a:hover {
+  background-color: #7e3661;
+  color: white;
+  text-decoration: none;
+}
