--- a/23.12.22/Pseudo-Selectors-Level-3_4/style.css
+++ b/23.12.22/Pseudo-Selectors-Level-3_4/style.css
@@ -8,3 +8,25 @@
   margin: 0;
   padding: 0;
 }
+
+img {
+  margin: 50px 50px 0;
+  height: 250px;
+  width: 250px;
+  object-fit: cover;
+  object-position: 0 20%;
+}
+
+#camera:hover {
+  border-radius: 50%;
+}
+
+#parrot:hover {
+  filter: grayscale(100%);
+}
+
+#taxi:hover {
+  border: 3px solid #4fa6c6;
+  outline: 3px solid #4fa6c6;
+  outline-offset: -10px;
+}
